definitions/tls-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: alpaca
spec:
  tls:
  - hosts:
    - alpaca.local
    secretName: alpaca
  rules:
  - host: alpaca.local
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: alpaca
            port:
              number: 8080
